--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Huynh Thanh Phuc</title>
+    <title>Huỳnh Thanh Phúc</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -30,7 +30,7 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 display-5"><span class="text-primary">Huynh Thanh Phuc</span></h1>
+            <h1 class="m-0 display-5"><span class="text-primary">Huỳnh Thanh Phúc</span></h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
-                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Huuynh Thanh Phuc</h1>
+                    <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #ffffff;">Huỳnh Thanh Phúc</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Web Designer, Web Developer, Front End Developer, Apps Designer, Apps Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
@@ -114,13 +114,13 @@
                     <h3 class="mb-4">UI/UX Designer & Web Developer</h3>
                     <p>Mỗi sự thành công đều đến từ nhiều sự cố gắng. Muốn vị trí cao trong công việc, tôi phải không ngừng nỗ lực và vươn lên chính mình.</p>
                     <div class="row mb-3">
-                        <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Hao Le Nhat</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Nick name: <span class="text-secondary">Nin</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">28 March 2002</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Huỳnh Thanh Phúc</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Nick name: <span class="text-secondary">PHVC</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">25 September 2002</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Degree: <span class="text-secondary">Engineer</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Experience: <span class="text-secondary">2 Years</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">0384867195</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">lenhathao280302@gmail.com</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Phone: <span class="text-secondary">0348095507</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">huynhphuc341@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Address: <span class="text-secondary">Ho Chi Minh</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Available</span></h6></div>
                     </div>
@@ -153,13 +153,13 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">High School</h5>
-                            <p class="mb-2"><strong> Tam Phước High School</strong> | <small>2017 - 2020</small></p>
+                            <p class="mb-2"><strong>Vo Van Kiet High School</strong> | <small>2017 - 2020</small></p>
                             <p>Nothing to describe</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Junior High School</h5>
-                            <p class="mb-2"><strong>An Phước Junior High School</strong> | <small>2014 - 2017</small></p>
+                            <p class="mb-2"><strong>Nguyen Chi Trai Junior High School</strong> | <small>2014 - 2017</small></p>
                             <p>Nothing to describe</p>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Passenger service team staff</h5>
-                            <p class="mb-2"><strong>Tan Son Nhat Airport</strong> | <small>2020 - 2023</small></p>
+                            <p class="mb-2"><strong>Lotteria Mart 3 Thang 2</strong> | <small>2020 - 2023</small></p>
                             <p>Nothing to describe</p>
                         </div>
                         <div class="position-relative mb-4">
@@ -501,7 +501,7 @@
                 <span class="px-3">|</span>
                 <a class="text-white" href="#">Help</a>
             </div>
-            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">Haolenhat.github.io</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">Hao Le Nhat</a>
+            <p class="m-0">&copy; <a class="text-white font-weight-bold" href="#">phuc-huynhthanh.github.io</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://htmlcodex.com">Hao Le Nhat</a>
             </p>
         </div>
     </div>
