--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
             
                         <div class="d-flex justify-content-center ">
                             <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/haolenhat280302/"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/youngphvcbedasick/"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-light btn-social mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-light btn-social" href="https://www.instagram.com/nin.nef.28.03/"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-light btn-social" href="https://www.instagram.com/hyun._.phvc/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
